--- a/styles/sass/_mediaq.scss
+++ b/styles/sass/_mediaq.scss
@@ -9,8 +9,19 @@
 @media (max-width: 1311px) {
 
     // About section 
-    #About div {
-        width: 80%;
+    #About {
+        height: 40vh;
+        position: relative;
+        top: -5rem;
+
+        div {
+            width: 85%;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-top: 5rem;
+        }
     }
 
     // blog section
@@ -38,14 +49,15 @@
     .galleryParent {
         margin: auto;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         grid-template-rows: 1fr 1fr 1fr;
-        grid-gap: 30px;
-        padding: 10rem;
+        grid-gap: 20px;
+        padding: 10rem 0;
+        width: 70%;
     }
 
     .imgHouse {
-        width: 50%;
+        width: 30%;
     }
 
     .img1 {
@@ -60,7 +72,7 @@
         grid-area: 3;
     }
 
-    }
+}
 
 @media (max-width: 1000px) {
 
@@ -68,10 +80,10 @@
     // header
     header {
         background: url(../../assets/home-image-1.jpg);
-        background-size: 110%;
+        background-size: 120%;
         background-position: center;
         background-repeat: no-repeat;
-        background-position: 0 0.25px;
+        background-position: 0 0.5px;
         height: 80vh;
     }
 
@@ -130,12 +142,10 @@
             padding: 4rem;
         }
     }
-
-
-
 }
 
 @media (max-width: 950px) {
+    // contact form responsive
     .contactMain {
         width: 100%;
     }
@@ -192,11 +202,25 @@
 }
 
 @media (max-width: 800px) {
+
     // // ••• Index.html media queries
+    // header
+    .headerCircle {
+        width: calc(10.5vw + 2px);
+        min-width: 70px;
+        position: relative;
+        right: calc(13vw + 1.5px);
+        bottom: calc(3.5vh + 1.5px);
+    }
 
-    
+    // Journey About section
+
+    .journey {
+        height: 120vh;
+        width: 100vw;
+        flex-direction: column;
+    }
 }
-
 
 @media (max-width: 680px) {
 
@@ -356,24 +380,49 @@
                     }
                 }
             }
-
         }
     }
 
     // slide it in from the left
     #menuToggle input:checked~ul {
         transform: none;
-
     }
 
-
     // ••• Index.html media queries
-    // ••• blog section styling.
+    // •••header
+    .headerCircle {
+        width: calc(10.5vw + 2px);
+        min-width: 70px;
+        position: relative;
+        right: calc(20vw + 1.5px);
+        bottom: calc(2.5vh + 1.5px);
+    }
 
+    // about
+    #About {
+        top: -25rem;
+        padding-top: 5rem;
+    }
+
+    // ••• blog section styling.
     .blogParentBox {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         grid-gap: 15px;
         margin: 0 auto;
+    }
+
+    .text-Width {
+        width: 90vw;
+
+        h2 {
+            line-height: 3rem;
+        }
+
+        .minButton {
+            width: 20rem;
+            position: relative;
+            left: -2rem;
+        }
     }
 }
