--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -1,5 +1,3 @@
-
-
 nav {
     display: flex;
     justify-content: center;
@@ -23,6 +21,7 @@ nav {
 
                 &:hover {
                     color: white;
+                    transition: .3s color, .3s transform;
                 }
             }
 
