--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -477,6 +477,8 @@ nav ul li a {
 
 nav ul li a:hover {
   color: white;
+  -webkit-transition: .3s color, .3s transform;
+  transition: .3s color, .3s transform;
 }
 
 nav ul li h2 {
@@ -1197,7 +1199,7 @@ footer {
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1070px) {
   header {
     background: url(../../assets/home-image-1.jpg);
     background-size: 120%;
@@ -1224,9 +1226,15 @@ footer {
     z-index: 0;
   }
   input[name="toggle"]:checked + .blogAside {
-    left: 0rem;
+    left: -1rem;
     -webkit-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
+  }
+  .asideButton2 {
+    width: 6rem;
+    height: 5.5rem;
+    -webkit-box-shadow: 2px 2px #171717;
+            box-shadow: 2px 2px #171717;
   }
   .asideButton:hover {
     -webkit-transform: rotate(90deg);
@@ -1239,6 +1247,8 @@ footer {
     position: absolute;
     left: -200rem;
     z-index: 1;
+    -webkit-box-shadow: 3px 3px 5px #171717;
+            box-shadow: 3px 3px 5px #171717;
   }
   .blogMain {
     display: block;
@@ -1410,6 +1420,8 @@ footer {
     transition: background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    -webkit-box-shadow: 3px 3px 5px #F6F6F6;
+            box-shadow: 3px 3px 5px #F6F6F6;
   }
   #menuToggle span:first-child {
     -webkit-transform-origin: 0% 0%;
@@ -1492,8 +1504,8 @@ footer {
     width: calc(10.5vw + 2px);
     min-width: 70px;
     position: relative;
-    right: calc(20vw + 1.5px);
-    bottom: calc(2.5vh + 1.5px);
+    right: calc(14vw + 2%);
+    bottom: calc(2.8vh + 2%);
   }
   #About {
     top: -25rem;
@@ -1517,6 +1529,20 @@ footer {
     width: 20rem;
     position: relative;
     left: -2rem;
+  }
+  .journey {
+    height: 120vh;
+    width: 100vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .textWidth {
+    width: 80%;
+  }
+  .minButton {
+    width: 70%;
   }
 }
 /*# sourceMappingURL=styles.css.map */
