--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,7 +1,7 @@
 // footer styles
 footer {
     height: 5rem;
-    background: #171717;
+    background: $blackColor;
     color: white;
     margin: 0;
     padding: 0;
