--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -12,7 +12,7 @@ html {
 
 body {
     overflow-x: hidden;
-    background: #f6f6f6;
+    background: $whiteShadeColor;
 }
 
 .wrapper {
@@ -43,7 +43,6 @@ h2 {
     @include fluid-type (4rem, 5rem, 360px, 1950px);
     margin: 0;
     line-height: 4.5rem;
-
 }
 
 h3 {
@@ -116,8 +115,9 @@ button:active {
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap; /* added line */
 }
+// ^end visually-hidden code
 
-/* Accessibility code for skip-link */
+// Accessibility code for skip-link
 .skip-link {
     position: absolute;
     left: -999px;
@@ -144,7 +144,7 @@ button:active {
 .skip-link:focus {
     left: 5%;
 }
-
+// ^ End skip code 
 
 .pBreak {
     display: block;
